syntax = "proto3";

package vera.grpc;

service ReceiptService {
    // Invoked to render a thermal receipt for the given invoice
    rpc RenderThermal(RenderThermalRequest) returns (RenderThermalReply);
}

message RenderThermalRequest {
    string account = 1;

    // Number of the invoice to generate the thermal receipt for
    string number = 2;

    // Type specifies the output type that the client is requesting
    ReceiptOutputType type = 3;
}

message RenderThermalReply {
    // Type of the output as requested in the RenderThermalRequest
    ReceiptOutputType type = 1;

    // Content of the thermal receipt in the requested type
    bytes content = 2;
}

enum ReceiptOutputType {
    // Output the receipt as a tree of commands that can be converted to the actual representation of the receipt
    JSON = 0;

    // Output as raw text, useful for debugging
    TEXT = 1;

    // Output as bytes that can directly be send to an Epson thermal printer
    ESC = 2;
}